fix: bust image cache and align hero content to left

--- a/styles/hero.module.scss
+++ b/styles/hero.module.scss
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  align-items: flex-start;
+  text-align: left;
 }
 
 .iconWrapper {
